# lgbt.sky.imagewag

./: .gitignore  Makefile  README.md
main/: CMakeLists.txt  idf_component.yml  main.c
sdkconfigs/: general  tanmatsu
